# litesvm-testing

./: CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  LICENSE-CONTENT  Makefile  README.md
.github/: WORKFLOW_SETUP.md
.github/workflows/: ci.yml  release.yml
crates/litesvm-testing/: BENCHMARKING.md  Cargo.toml
crates/litesvm-testing/benches/: cu_bench_sol_transfer.rs  cu_bench_sol_transfer_ix.rs  cu_bench_spl_transfer.rs  cu_bench_spl_transfer_ix.rs  cu_bench_token_setup_tx.rs
crates/litesvm-testing/src/: build_internal.rs  lib.rs
crates/litesvm-testing/src/anchor/: build.rs  mod.rs
crates/litesvm-testing/src/anchor_testing/: build.rs
crates/litesvm-testing/src/cu_bench/: DESIGN_NOTES.md  context.rs  estimate.rs  mod.rs  runner.rs
crates/litesvm-testing/src/pinocchio/: build.rs  mod.rs
crates/litesvm-testing/src/pinocchio_testing/: build.rs  mod.rs
crates/litesvm-testing/tests/: test_system_error_account_already_in_use.rs  test_system_error_insufficient_funds.rs  test_system_error_invalid_account_data_length.rs
docs/twitter-threads/: 01_announcement.md
examples/anchor/simple-anchor-program/: Cargo.toml
examples/anchor/simple-anchor-program/src/: lib.rs
examples/anchor/simple-anchor-tests/: Cargo.toml  build.rs
examples/anchor/simple-anchor-tests/src/: lib.rs
examples/anchor/simple-anchor-tests/tests/: test_initialize.rs  test_simple_anchor_program.rs  test_system_errors.rs
examples/pinocchio/simple-pinocchio-program/: Cargo.toml
examples/pinocchio/simple-pinocchio-program/src/: lib.rs
examples/pinocchio/simple-pinocchio-tests/: Cargo.toml  build.rs
examples/pinocchio/simple-pinocchio-tests/src/: lib.rs
examples/pinocchio/simple-pinocchio-tests/tests/: test_simple_pinocchio_program.rs
