[workspace]
resolver = "2"
members = [
    "crates/litesvm-testing",
    "examples/anchor/simple-anchor-program",
    "examples/anchor/simple-anchor-tests",
    "examples/pinocchio/simple-pinocchio-program",
    "examples/pinocchio/simple-pinocchio-tests",
]

[workspace.dependencies]
simple-anchor-program = { path = "examples/anchor/simple-anchor-program" }
simple-anchor-tests = { path = "examples/anchor/simple-anchor-tests" }
simple-pinocchio-program = { path = "examples/pinocchio/simple-pinocchio-program" }
simple-pinocchio-tests = { path = "examples/pinocchio/simple-pinocchio-tests" }

litesvm-testing = { path = "crates/litesvm-testing" }
litesvm = "0.6.1"

anchor-lang = "0.31.1"
solana-instruction = "2.2"
solana-keypair = "2.2"
solana-pubkey = "2.2"
solana-signer = "2.2"
solana-system-interface = "1"
solana-transaction = "2.2"
solana-transaction-error = "2.2"

pinocchio = "0.8.4"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"


[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug", "no-idl", "no-log-ix-name"))',
    'cfg(target_os, values("solana"))',
] }
