[workspace]
resolver = "2"
members = [
    "crates/litesvm-testing",
    "examples/anchor/simple-anchor-program",
    "examples/anchor/simple-anchor-tests",
    "examples/pinocchio/simple-pinocchio-program",
    "examples/pinocchio/simple-pinocchio-tests",
]

[workspace.package]
authors = ["LiteSVM Testing Framework Contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/levicook/litesvm-testing"
homepage = "https://github.com/levicook/litesvm-testing"
readme = "README.md"
keywords = ["solana", "testing", "blockchain", "litesvm", "framework"]
categories = ["development-tools::testing"]

[workspace.dependencies]
simple-anchor-program = { path = "examples/anchor/simple-anchor-program" }
simple-anchor-tests = { path = "examples/anchor/simple-anchor-tests" }
simple-pinocchio-program = { path = "examples/pinocchio/simple-pinocchio-program" }
simple-pinocchio-tests = { path = "examples/pinocchio/simple-pinocchio-tests" }

anchor-lang = "0.31.1"
chrono = "0.4.41"
litesvm = "0.6.1"
litesvm-testing = { path = "crates/litesvm-testing" }
log = "0.4.27"
env_logger = "0.11.8"
num-traits = "0.2.19"
pinocchio = "0.8.4"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
serde = "1.0.219"
serde_json = "1.0.140"
solana-clock = "2.2"
solana-compute-budget-interface = "2.2"
solana-hash = "2.2"
solana-instruction = "2.2"
solana-keypair = "2.2"
solana-message = "2.2"
solana-pubkey = "2.2"
solana-signer = "2.2"
solana-system-interface = "1"
solana-transaction = "2.2"
solana-transaction-error = "2.2"
spl-token = "7"
spl-associated-token-account = "7"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug", "no-idl", "no-log-ix-name"))',
    'cfg(target_os, values("solana"))',
] }
