[package]
name = "litesvm-testing"
version = "0.1.0"
edition = "2021"

[lib]
name = "litesvm_testing"
path = "src/lib.rs"

[features]
anchor = []
pinocchio = []

[dependencies]
litesvm = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }