[package]
name = "litesvm-testing"
version = "0.1.1"
edition = "2021"
authors = ["LiteSVM Testing Framework Contributors"]
license = "GPL-3.0-or-later"
description = "Comprehensive testing framework for Solana programs using LiteSVM with ergonomic assertions"
repository = "https://github.com/levicook/litesvm-testing"
homepage = "https://github.com/levicook/litesvm-testing"
documentation = "https://docs.rs/litesvm-testing"
readme = "../../README.md"
keywords = ["solana", "testing", "blockchain", "litesvm", "framework"]
categories = ["development-tools::testing"]
include = [
    "src/**/*",
    "tests/**/*",
    "Cargo.toml",
    "../../README.md",
    "../../LICENSE",
]

[lib]
name = "litesvm_testing"
path = "src/lib.rs"

[features]
anchor = []
cu_bench = []
pinocchio = []

[[bench]]
name = "cu_bench_sol_transfer"
harness = false

[[bench]]
name = "cu_bench_spl_transfer"
harness = false

[dependencies]
chrono = { workspace = true }
litesvm = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
