[package]
name = "simple-anchor-program"
version = "0.2.0"
edition = "2021"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_anchor_program"

[lints]
workspace = true

[dependencies]
anchor-lang = { workspace = true }
