[package]
name = "simple-anchor-tests"
version = "0.2.0"
edition = "2021"

[build-dependencies]
litesvm-testing = { workspace = true, features = ["anchor"] }

[dependencies]
anchor-lang = { workspace = true }
litesvm = { workspace = true }
simple-anchor-program = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
litesvm-testing = { workspace = true, features = ["anchor"] }
